--- a/notebook2/crawler.ipynb
+++ b/notebook2/crawler.ipynb
@@ -83,8 +83,7 @@
     "\n",
     "第三方套件\n",
     "* BeautifulSoup \n",
-    "* requests   \n",
-    "* pandas   \n"
+    "* requests   \n"
    ]
   },
   {
@@ -125,17 +124,6 @@
    ],
    "source": [
     "!pip3 install requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pip3 install pandas"
    ]
   },
   {
@@ -188,6 +176,11 @@
     }
    },
    "source": [
+    ".   \n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "\n",
     "# Rqueests\n",
     "[Document](http://docs.python-requests.org/en/latest/)"
    ]
